[package]
name = "transdirect-api"
version = "0.1.3"
description = "Rest wrapper for Transdirect written in Rust. Currently only synchronous"
repository = "https://github.com/BazzaCipher/transdirect/"
edition = "2021"
license = "MIT"

[lib]
name = "transdirect"

[dependencies]
restson = "^1.3"
time = { version = "^0.3", features = ["serde"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_with = { version = "^2.2", features = ["time_0_3"] }
num-traits = "^0.2"